--- a/src/main/java/MainTab.form
+++ b/src/main/java/MainTab.form
@@ -158,11 +158,12 @@
                       <text value="Delete selected"/>
                     </properties>
                   </component>
-                  <component id="3b0e8" class="javax.swing.JCheckBox" binding="enabledCheckBox" default-binding="true">
+                  <component id="3b0e8" class="javax.swing.JCheckBox" binding="enableBlackListcheckbox">
                     <constraints>
                       <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
+                      <selected value="true"/>
                       <text value="Enabled"/>
                     </properties>
                   </component>
@@ -246,11 +247,12 @@
                       <text value="Delete selected"/>
                     </properties>
                   </component>
-                  <component id="1dcde" class="javax.swing.JCheckBox" binding="enabledCheckBox1" default-binding="true">
+                  <component id="1dcde" class="javax.swing.JCheckBox" binding="enableForceinterceptCheckbox">
                     <constraints>
                       <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
+                      <selected value="true"/>
                       <text value="Enabled"/>
                     </properties>
                   </component>
